--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="container">
             <div class="infos">
                 <h6 class="subtitle">Olá, eu sou</h6>
-                <h6 class="title">Luis Coral</h6>
+                <h6 class="title">Luis Coral 1232</h6>
                 <p>Estudante de Ciências da Computação</p>
 
                 <div class="buttons pt-3">
