--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="container">
             <div class="infos">
                 <h6 class="subtitle">Olá, eu sou</h6>
-                <h6 class="title">Luis Coral 1232</h6>
+                <h6 class="title">Luis Coral </h6>
                 <p>Estudante de Ciências da Computação</p>
 
                 <div class="buttons pt-3">
@@ -96,42 +96,61 @@
 
             <div class="row">
                 <div class="col-sm-6 col-md-3 mb-4">
-                    <div class="custom-card card border">
-                        <div class="card-body">
-                            <h5>Bubble Sort</h5>
-                            </h5>
+                    <a href="assets/imgs/Bubble Sort_.pdf" target="_blank">
+                        <div class="custom-card card border">
+                            <div class="card-body">
+                                <div class="card">
+                                    <h2>Bubble Sort</h2>
+                                </div>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
                 <div class="col-sm-6 col-md-3 mb-4">
-                    <div class="custom-card card border">
-                        <div class="card-body">
-                            <h5>Selection Sort</h5>
+                    <a href="assets/imgs/Selection Sort_.pdf" target="_blank">
+                        <div class="custom-card card border">
+                            <div class="card-body">
+                                <div class="card">
+                                    <h2>Selection Sort</h2>
+                                </div>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
                 <div class="col-sm-6 col-md-3 mb-4">
-                    <div class="custom-card card border">
-                        <div class="card-body">
-                            <h5>Insertion Sort</h5>
+                    <a href="assets/imgs/Insertion Sort_.pdf" target="_blank">
+                        <div class="custom-card card border">
+                            <div class="card-body">
+                                <div class="card">
+                                    <h2>Insertion Sort</h2>
+                                </div>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
                 <div class="col-sm-6 col-md-3 mb-4">
-                    <div class="custom-card card border">
-                        <div class="card-body">
-                            <h5>Merge Sort</h5>
+                    <a href="assets/imgs/Merge Sort_.pdf" target="_blank">
+                        <div class="custom-card card border">
+                            <div class="card-body">
+                                <div class="card">
+                                    <h2>Merge Sort</h2>
+                                </div>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
             </div>
             <div class="row"> 
                 <div class="col-sm-6 col-md-3 mb-4">
-                    <div class="custom-card card border">
-                        <div class="card-body">
-                            <h5>Algoritmo de busca <br>binária<br></h5>
+                    <a href="assets/imgs/Busca Binária_.pdf" target="_blank">
+                        <div class="custom-card card border">
+                            <div class="card-body">
+                                <div class="card">
+                                    <h2>Algoritmo de busca<br> binária<br></h2>
+                                </div>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
             </div>
     </section>
