--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div class="buttons pt-3">
                     <button class="btn btn-primary rounded">Me contrate</button>
                        <!-- colocar o curriculo -->
-                    <a target="blank" href="assets/imgs/logo-removebg-preview.png" class="btn btn-dark rounded">Download Curriculo</a>
+                    <a target="blank" href="assets/imgs/" class="btn btn-dark rounded">Download Curriculo</a>
                 </div>      
 
                 <div class="socials mt-4">
