--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
         <div class="container">
             <div class="infos">
                 <h6 class="subtitle">Olá, eu sou</h6>
-                <h6 class="title">Luis Coral </h6>
+                <h6 class="title">Luis Coral</h6>
                 <p>Estudante de Ciências da Computação</p>
 
                 <div class="buttons pt-3">
                     <button class="btn btn-primary rounded">Me contrate</button>
                        <!-- colocar o curriculo -->
-                    <a target="blank" href="assets/imgs/" class="btn btn-dark rounded">Download Curriculo</a>
+                    <a target="blank" href="assets/imgs/logo.png" class="btn btn-dark rounded">Download Curriculo</a>
                 </div>      
 
                 <div class="socials mt-4">
@@ -63,7 +63,8 @@
                 </div>
             </div>              
             <div class="img-holder">
-                <img src="assets/imgs/eu1-removebg-preview.png" alt="">
+                <!-- editar para por uma foto-->
+                <img src="assets/imgs/" alt="">
             </div>      
         </div>  
 
@@ -93,8 +94,8 @@
             <h6 class="subtitle">Cálculo</h6>
             <h6 class="section-title mb-4">Algoritmo de Ordenação</h6>
             <p class="mb-5 pb-4">Aqui será postado os seguintes algoritmo. <br> Bubble Sort; Selection Sort; Insertion Sort; Merge Sort e o algoritmo de busca binária.</p>
-
-            <div class="row">
+              <!-- Adicionar tarbalho solicitado -->          
+              <div class="row">
                 <div class="col-sm-6 col-md-3 mb-4">
                     <a href="assets/imgs/Bubble Sort_.pdf" target="_blank">
                         <div class="custom-card card border">
