--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     </a>
                 </div>
                 <div class="col-sm-6 col-md-3 mb-4">
-                    <a href="assets/imgs/Selection Sort_.pdf" target="_blank">
+                    <a href="file:///C:/Users/migue/Documents/Portfolio/assets/imgs/Selection%20Sort_.pdf" target="_blank">
                         <div class="custom-card card border">
                             <div class="card-body">
                                 <div class="card">
