--- a/index.html
+++ b/index.html
@@ -107,12 +107,13 @@
                         </div>
                     </a>
                 </div>
+              <div class="row">
                 <div class="col-sm-6 col-md-3 mb-4">
-                    <a href="file:///C:/Users/migue/Documents/Portfolio/assets/imgs/Selection%20Sort_.pdf" target="_blank">
+                    <a href="assets/imgs/Bubble Sort_.pdf" target="_blank">
                         <div class="custom-card card border">
                             <div class="card-body">
                                 <div class="card">
-                                    <h2>Selection Sort</h2>
+                                    <h2>Bubble Sort</h2>
                                 </div>
                             </div>
                         </div>
