--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 </div>
               <div class="row">
                 <div class="col-sm-6 col-md-3 mb-4">
-                    <a href="assets/imgs/Bubble Sort_.pdf" target="_blank">
+                    <a href=""C:\Users\migue\Documents\Portfolio\assets\imgs\Bubble Sort_.pdf"" target="_blank">
                         <div class="custom-card card border">
                             <div class="card-body">
                                 <div class="card">
