--- a/index.html
+++ b/index.html
@@ -97,19 +97,7 @@
               <!-- Adicionar tarbalho solicitado -->          
               <div class="row">
                 <div class="col-sm-6 col-md-3 mb-4">
-                    <a href="assets/imgs/Bubble Sort_.pdf" target="_blank">
-                        <div class="custom-card card border">
-                            <div class="card-body">
-                                <div class="card">
-                                    <h2>Bubble Sort</h2>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-              <div class="row">
-                <div class="col-sm-6 col-md-3 mb-4">
-                    <a href=""C:\Users\migue\Documents\Portfolio\assets\imgs\Bubble Sort_.pdf"" target="_blank">
+                    <a href="C:\Users\migue\Documents\Portfolio\assets\imgs\Bubble Sort_.pdf" target="_blank">
                         <div class="custom-card card border">
                             <div class="card-body">
                                 <div class="card">
@@ -120,7 +108,18 @@
                     </a>
                 </div>
                 <div class="col-sm-6 col-md-3 mb-4">
-                    <a href="assets/imgs/Insertion Sort_.pdf" target="_blank">
+                    <a href="C:\Users\migue\Documents\Portfolio\assets\imgs\Selection Sort_.pdf" target="_blank">
+                        <div class="custom-card card border">
+                            <div class="card-body">
+                                <div class="card">
+                                    <h2>Selection Sort</h2>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-sm-6 col-md-3 mb-4">
+                    <a href="C:\Users\migue\Documents\Portfolio\assets\imgs\Insertion Sort_.pdf" target="_blank">
                         <div class="custom-card card border">
                             <div class="card-body">
                                 <div class="card">
@@ -131,7 +130,7 @@
                     </a>
                 </div>
                 <div class="col-sm-6 col-md-3 mb-4">
-                    <a href="assets/imgs/Merge Sort_.pdf" target="_blank">
+                    <a href="C:\Users\migue\Documents\Portfolio\assets\imgs\Merge Sort_.pdf" target="_blank">
                         <div class="custom-card card border">
                             <div class="card-body">
                                 <div class="card">
@@ -144,7 +143,7 @@
             </div>
             <div class="row"> 
                 <div class="col-sm-6 col-md-3 mb-4">
-                    <a href="assets/imgs/Busca Binária_.pdf" target="_blank">
+                    <a href="C:\Users\migue\Documents\Portfolio\assets\imgs\Busca Binária_.pdf" target="_blank">
                         <div class="custom-card card border">
                             <div class="card-body">
                                 <div class="card">
