--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               <!-- Adicionar tarbalho solicitado -->          
               <div class="row">
                 <div class="col-sm-6 col-md-3 mb-4">
-                    <a href="C:\Users\migue\Documents\Portfolio\assets\imgs\Bubble Sort_.pdf" target="_blank">
+                    <a href="https://github.com/LuisMiguelCoral/LuisMiguelCoral.github.io/blob/main/assets/imgs/Bubble%20Sort_.pdf" target="_blank">
                         <div class="custom-card card border">
                             <div class="card-body">
                                 <div class="card">
